--- a/style.css
+++ b/style.css
@@ -11,124 +11,79 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Karla', sans-serif;
+    
     /* border: solid 1px gray; */
 }
 
 body {
     background-color: var(--Light-Gray);
-    
-
+    font-family: 'Karla', sans-serif;
 }
 
 .container {
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    margin: 4rem 0;
 }
 
 .box {
-    width: 635px;
-    height: 475px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 7px;
-    box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.2);
-    
+    width: 90%;
+    max-width: 640px;
+    display: grid;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    font-size: 1rem;
 }
-
-.box__top-side {
-    flex: 0 0 45%;
+.box__community {
     background-color: white;
-    padding: 2.5rem;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
+    padding: 1.2em 1.5em 3em;
+    border-top-left-radius: .3em;
+    border-top-right-radius: .3em;
 }
-
-.top-side__tittle {
+.community__tittle {
     color: var(--Cyan);
+    font-size: 1.5em;
+    margin-top: 1em;
 }
-.top-side__subtittle {
+.community__subtittle {
     color: var(--Bright-Yellow);
-    margin-top: 1.2rem;
-}
-.top-side__p {
-    color: var(--Grayish-Blue);
-    margin-top: 1rem;
-}
-
-
-
-
-
-
-.box__bottom-side {
-    display: flex;
-    flex-flow: row nowrap;
-    flex: 0 0 55%;
-    color: white;
-    
-    
-}
-.bottom-side__subscription {
-    background-color: black;
-    flex: 0 0 50%;
-    border-bottom-left-radius: 7px;
-    background-color: var(--Cyan);
-    padding-top: 2.5rem;
-    padding-left: 2.5rem;
-    
-}
-.bottom-side__info {
-    padding: 2.5rem;
-    flex: 0 0 50%;
-    background-color:#4abebd;
-    border-bottom-right-radius: 7px;
-    padding-top: 2.5rem;
-    padding-left: 2.5rem;
-}
-
-.bottom-side__tittle {
-    margin-bottom: 1.2rem;
     font-size: 1.2em;
+    margin-top: 1em;
 }
-.bottom-side__price {
+.community__paragraph {
+    color: var(--Grayish-Blue);
+    font-size: 1em;
+    margin-top: 1em;
+    line-height: 1.6em;
+}
+
+.box__subscription {
+    background-color: var(--Cyan);
+    color: white;
+    padding: 1.5em;
+}
+.subscription__tittle {
+    font-size: 1.3em;
+}
+.subscription__price {
+    margin-top: .5em;
     font-size: 2em;
-    font-weight: 700;
+    
 }
-.bottom-side__p {
-    margin-top: .5rem;
-}
-.bottom-side__p--price {
+.subscription__price span {
     font-size: 1rem;
     font-weight: 400;
-    color: rgba(255, 255, 255, .5);
-    
+    color: rgba(255, 255, 255,.6);
     
 }
-
-.bottom-side__button {
-    width: 237px;
-    height: 50px;
-    border-style: none;
-    border-radius: 5px;
-    background-color: var(--Bright-Yellow);
-    color: white;
-    font-size: 1rem;
-    font-weight: 700;
-    margin-top: 2rem;
-    box-shadow: 3px 5px 20px 0px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
+.subscription__subtittle {
+    margin-top: 1em;
+    font-weight: 400;
 }
-
-.bottom-side__button:hover {
-    
-    transform: scale(1.1);
-}
-
-.bottom-side__p--left{
-    font-size: .9rem;
-    line-height: 1.5em;
-    
+.subscription__botton {
+    margin: 1.2em auto;
+    text-align: center;
+    width: 80%;
 }
